--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <p>Hotel Paraiso</p>
       </div>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Alojamientos</a></li>
-        <li><a href="#">Servicios</a></li>
-        <li><a href="#">Contactanos</a></li>
+        <li><a href="index.html">Home</a></li> |
+        <li><a href="reservas.html">Alojamientos</a></li> |
+        <li><a href="#">Servicios</a></li> |
+        <li><a href="#">Contactanos</a></li> 
       </ul>
     </nav>
     <!-- Seccion Carusel -->
@@ -64,7 +64,7 @@
       </div>
     </section>
     <!-- Footer -->
-    <section>
+    <section class="footer">
       <div>
         <div>
           <h5>© Copyright 2023 - Hotel Paraiso. Todos los derechos reservados.</h5>
