--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <ul>
         <li><a href="index.html">Home</a></li> |
         <li><a href="reservas.html">Alojamientos</a></li> |
-        <li><a href="#">Servicios</a></li> |
-        <li><a href="#">Contactanos</a></li> 
+        <li><a href="servicios.html">Servicios</a></li> |
+        <li><a href="contactanos.html">Contactanos</a></li> 
       </ul>
     </nav>
     <!-- Seccion Carusel -->
