Fix: Cambiar rutas absolutas a relativas de img

--- a/reservas.html
+++ b/reservas.html
@@ -30,7 +30,7 @@
       <div>
         <div>
           <img
-            src="/img/hotel1photo.webp"
+            src="./img/hotel1photo.webp"
             height="250"
             width="300"
             alt="hotel1"
@@ -40,7 +40,7 @@
         </div>
         <div>
           <img
-            src="/img/hotel2photo.jpg"
+            src="./img/hotel2photo.jpg"
             height="250"
             width="300"
             alt="hotel2"
@@ -50,7 +50,7 @@
         </div>
         <div>
           <img
-            src="/img/hotel3photo.avif"
+            src="./img/hotel3photo.avif"
             height="250"
             width="300"
             alt="hotel3"
@@ -60,7 +60,7 @@
         </div>
         <div>
           <img
-            src="/img/hotel4photo.jpg"
+            src="./img/hotel4photo.jpg"
             height="250"
             width="300"
             alt="hotel4"
