Agregar número del grupo

--- a/contactanos.html
+++ b/contactanos.html
@@ -75,7 +75,7 @@
           </h5>
         </div>
         <div>
-          <p>Desarrollado por el grupo</p>
+          <p>Desarrollado por el grupo 1</p>
         </div>
       </div>
     </section>
