--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <h5>© Copyright 2023 - Hotel Paraiso. Todos los derechos reservados.</h5>
         </div>
         <div>
-          <p>Desarrollado por el grupo </p>
+          <p>Desarrollado por el grupo 1 </p>
         </div>
       </div>
     </section>
