style: Responsive página principal

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
               alt="testimonio1"
             />
             <div>
-              <h4 class="Testimonio-nombre">Luis Perez Yañez</h4>
+              <h4 class="testimonio-nombre">Luis Perez Yañez</h4>
               <p>
                 "Mi experiencia en este hotel ha sido excelente. Desde el
                 momento en que llegué, todo el personal ha sido muy amable y
                 servicial. La atención que recibí fue de primera clase y me
-                sentí muy bien cuidado durante mi estadia. ¡Recomendaría este
+                sentí muy bien cuidado durante mi estadía. ¡Recomendaría este
                 hotel a cualquiera!"
               </p>
             </div>
@@ -91,7 +91,7 @@
               alt="testimonio2"
             />
             <div>
-              <h4 class="Testimonio-nombre">Alejandra Ramos Cabrera</h4>
+              <h4 class="testimonio-nombre">Alejandra Ramos Cabrera</h4>
               <p>
                 "Estoy profundamente agradecida con todo el personal que trabaja
                 en este hotel. Fui atendida con rapidez y eficacia, y siempre me
@@ -133,7 +133,7 @@
             </p>
           </div>
           <div class="developer">
-            <p>Desarrollado por el grupo</p>
+            <p>Desarrollado por el grupo 1</p>
           </div>
         </div>
       </div>
