style: Agregar estilos a la página de servicios

--- a/contactanos.html
+++ b/contactanos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Contactanos</title>
   </head>
   <body>
@@ -14,11 +14,11 @@
       </div>
       <ul>
         <li><a href="index.html">Home</a></li>
-        |
+
         <li><a href="reservas.html">Alojamientos</a></li>
-        |
+
         <li><a href="servicios.html">Servicios</a></li>
-        |
+
         <li><a href="contactanos.html">Contactanos</a></li>
       </ul>
     </nav>
@@ -67,19 +67,21 @@
     </section>
     <!-- Fin Contactanos -->
     <!-- Footer -->
-    <section class="footer">
-      <div>
-        <div>
-          <h5>
-            © Copyright 2023 - Hotel Paraiso. Todos los derechos reservados.
-          </h5>
-        </div>
-        <div>
-          <p>Desarrollado por el grupo 1</p>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="copyright">
+            <p>
+              &copy; Copyright 2023 - Hotel Paraíso. Todos los derechos
+              reservados.
+            </p>
+          </div>
+          <div class="developer">
+            <p>Desarrollado por el grupo 1</p>
+          </div>
         </div>
       </div>
-    </section>
-
+    </footer>
     <!-- Fin footer -->
   </body>
 </html>
