--- a/servicios.html
+++ b/servicios.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/servicios.css" />
     <title>Servicios</title>
   </head>
   <body>
@@ -14,76 +15,80 @@
       </div>
       <ul>
         <li><a href="index.html">Home</a></li>
-        |
+
         <li><a href="reservas.html">Alojamientos</a></li>
-        |
+
         <li><a href="servicios.html">Servicios</a></li>
-        |
+
         <li><a href="contactanos.html">Contactanos</a></li>
       </ul>
     </nav>
     <!-- Seccion Servicios -->
-    <section>
-      <div>
+    <section class="principal">
+      <div class="titulo-principal">
         <h1>Nuestros Servicios</h1>
       </div>
-      <div>
-        <div>
+      <div class="tarjetas">
+        <div class="tarjeta">
           <img src="./img/piscina.jpg" height="250" width="300" alt="piscina" />
           <h2>Piscinas</h2>
         </div>
-        <div>
+        <div class="tarjeta">
           <img src="./img/spa.jpg" height="250" width="300" alt="spa" />
           <h2>Spa</h2>
         </div>
-        <div>
+        <div class="tarjeta">
           <img src="./img/food.jpg" height="250" width="300" alt="food" />
           <h2>Restaurantes 24/7</h2>
         </div>
-        <div>
+        <div class="tarjeta">
           <img src="./img/gym.jpg" height="250" width="300" alt="gym" />
           <h2>Gimnasio 24/7</h2>
         </div>
       </div>
-      <div>
-        <h3>¡Bienvenido a una Experiencia Única!</h3>
-        <p>
+      <div class="secundario">
+        <h3 class="titulo-secundario">¡Bienvenido a una Experiencia Única!</h3>
+        <p class="parrafo">
           En nuestro exclusivo hotel, te invitamos a sumergirte en una
           experiencia inolvidable. Aquí, no solo encontrarás un lugar para
           descansar, sino disfrutar de las mejores vacaciones.
         </p>
-        <p>
+        <p class="parrafo">
           Imagina despertar en una habitación con vista panorámica, disfrutar de
           una gastronomía excepcional en nuestros restaurantes galardonados y
           relajarte en un spa de clase mundial. Todo esto y más te espera en
           nuestro hotel.
         </p>
-        <p>
+        <p class="parrafo">
           Nuestro equipo dedicado está listo para hacer que tu estadía sea
           perfecta en cada detalle. Ya sea que viajes por negocios o placer,
           estamos comprometidos a brindarte un servicio excepcional y
           comodidades de primera clase.
         </p>
-        <video controls>
-          <source src="./video/hotel.mp4" type="video/mp4" />
-        </video>
+        <div class="contenedor-video">
+          <video class="video" controls>
+            <source src="./video/hotel.mp4" type="video/mp4" />
+          </video>
+        </div>
       </div>
     </section>
     <!-- Fin Servicios -->
     <!-- Footer -->
-    <section class="footer">
-      <div>
-        <div>
-          <h5>
-            © Copyright 2023 - Hotel Paraiso. Todos los derechos reservados.
-          </h5>
-        </div>
-        <div>
-          <p>Desarrollado por el grupo 1</p>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="copyright">
+            <p>
+              &copy; Copyright 2023 - Hotel Paraíso. Todos los derechos
+              reservados.
+            </p>
+          </div>
+          <div class="developer">
+            <p>Desarrollado por el grupo 1</p>
+          </div>
         </div>
       </div>
-    </section>
-
+    </footer>
     <!-- Fin footer -->
   </body>
 </html>
