--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/home.css" />
     <title>Hotel | Paraiso</title>
   </head>
@@ -138,7 +138,6 @@
         </div>
       </div>
     </footer>
-
     <!-- Fin footer -->
   </body>
 </html>
