--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -25,7 +29,8 @@
         <img class="logo" src="./img/hotel-logo.png" alt="logo" />
         <p>Hotel Paraiso</p>
       </div>
-      <ul>
+      <button class="open-menu"><i class="bi bi-list"></i></button>
+      <ul class="menu">
         <li><a href="index.html">Home</a></li>
 
         <li><a href="reservas.html">Alojamientos</a></li>
@@ -40,6 +45,7 @@
       id="banner"
       class="carousel slide carousel_section"
       data-bs-ride="carousel"
+      data-interval="1000"
     >
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -139,5 +145,6 @@
       </div>
     </footer>
     <!-- Fin footer -->
+    <script src="js/index.js"></script>
   </body>
 </html>
