--- a/contactanos.html
+++ b/contactanos.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Contactanos</title>
   </head>
@@ -12,7 +16,8 @@
         <img class="logo" src="./img/hotel-logo.png" alt="logo" />
         <p>Hotel Paraiso</p>
       </div>
-      <ul>
+      <button class="open-menu"><i class="bi bi-list"></i></button>
+      <ul class="menu">
         <li><a href="index.html">Home</a></li>
 
         <li><a href="reservas.html">Alojamientos</a></li>
@@ -83,5 +88,6 @@
       </div>
     </footer>
     <!-- Fin footer -->
+    <script src="js/index.js"></script>
   </body>
 </html>
