--- a/contactanos.html
+++ b/contactanos.html
@@ -83,6 +83,17 @@
               />
             </div>
             <div class="form-group">
+              <label for="celular">Celular:</label>
+              <input
+                type="text"
+                name="celular"
+                id="celular"
+                placeholder="Ingresa tu celular"
+                required
+                autocomplete="off"
+              />
+            </div>
+            <div class="form-group">
               <label for="comentario">Comentario:</label>
               <textarea
                 name="comentario"
@@ -93,7 +104,12 @@
                 placeholder="Tu comentario o pregunta"
               ></textarea>
             </div>
+
             <button class="boton-enviar" type="button">Enviar</button>
+
+            <div class="result-container">
+              <p class="resultado">Envio exitoso</p>
+            </div>
           </form>
         </div>
       </div>
@@ -116,6 +132,8 @@
       </div>
     </footer>
     <!-- Fin footer -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="./js/email.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
